--- a/package.json
+++ b/package.json
@@ -1,22 +1,31 @@
 {
   "name": "@remote-kakao/core",
-  "version": "1.0.7",
-  "main": "dist/index.js",
-  "license": "MIT",
-  "repository": "https://github.com/remote-kakao/core.git",
+  "type": "module",
+  "version": "1.0.0",
+  "description": "A Node.js module that helps you create KakaoTalk bots.",
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/cjs/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/esm/index.js"
+    },
+    "./*": {
+      "require": "./dist/cjs/*/index.js",
+      "import": "./dist/esm/*/index.js"
+    }
+  },
   "scripts": {
-    "dev": "tsc --watch",
-    "build": "tsc"
+    "build": "$npm_execpath build:esm && $npm_execpath build:cjs",
+    "build:esm": "tsc -p tsconfig.json",
+    "build:cjs": "tsc -p tsconfig-cjs.json"
   },
+  "repository": "https://github.com/remote-kakao/core.git",
   "author": "thoratica <me@tica.fun>",
+  "license": "MIT",
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "nodemon": "^2.0.18",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "eventemitter3": "^4.0.7",
-    "node-kakaolink": "^1.1.7"
+    "@types/node": "^18.11.19",
+    "tsx": "^3.12.3",
+    "typescript": "^4.9.5"
   }
 }
