--- a/tsconfig-cjs.json
+++ b/tsconfig-cjs.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig-base.json",
   "compilerOptions": {
     "target": "ESNext",
-    "module": "ESNext",
-    "outDir": "./dist/esm"
+    "module": "CommonJS",
+    "outDir": "./dist/cjs"
   }
 }
