:sparkles: implement basic features

--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "declaration": true,
     "baseUrl": "./src",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
