--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
     "@types/node": "^18.11.19",
     "concurrently": "^7.6.0",
     "rome": "^11.0.0",
+    "tsx": "^3.12.5",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "typed-emitter": "^2.1.0"
   }
 }
