--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,102 @@
+### Git ###
+*.orig
+
+*.BACKUP.*
+*.BASE.*
+*.LOCAL.*
+*.REMOTE.*
+*_BACKUP_*.txt
+*_BASE_*.txt
+*_LOCAL_*.txt
+*_REMOTE_*.txt
+
+### Linux ###
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+
+.nfs*
+
+### macOS ###
+Icon
+
 .DS_Store
+.AppleDouble
+.LSOverride
 ._*
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+*.icloud
+
+### Node ###
+logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.pnpm-debug.log*
+
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+pids
+*.pid
+*.seed
+*.pid.lock
+
+build/Release
+
 node_modules/
-dist/
+
+*.tsbuildinfo
+
+.node_repl_history
+*.tgz
+
 .env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+### Visual Studio Code ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+*.vsix
+.history/
+.history
+.ionide
+
+### Windows ###
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.stackdump
+[Dd]esktop.ini
+$RECYCLE.BIN/
+
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
+
+*.lnk
+
+## Extra ##
+dist/
+old/
