--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@remote-kakao/core",
   "type": "module",
-  "version": "1.0.0",
+  "version": "2.0.0-alpha.0",
   "description": "A Node.js module that helps you create KakaoTalk bots.",
   "main": "./dist/cjs/index.js",
   "types": "./dist/cjs/index.d.ts",
@@ -21,17 +21,14 @@
     "build:esm": "tsc -p tsconfig.json",
     "build:cjs": "tsc -p tsconfig-cjs.json"
   },
-  "repository": "https://github.com/remote-kakao/core.git",
+  "keywords": [],
   "author": "thoratica <me@tica.fun>",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^18.11.19",
+    "@types/node": "^18.15.3",
     "concurrently": "^7.6.0",
     "rome": "^11.0.0",
-    "tsx": "^3.12.5",
-    "typescript": "^4.9.5"
-  },
-  "dependencies": {
-    "typed-emitter": "^2.1.0"
+    "typed-emitter": "^2.1.0",
+    "typescript": "^5.0.2"
   }
 }
