--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@remote-kakao/core",
-  "version": "2.0.0-alpha.0",
+  "version": "2.0.0-alpha.2",
   "description": "A Node.js module that helps you create KakaoTalk bots.",
   "main": "./dist/cjs/index.js",
   "types": "./dist/cjs/index.d.ts",
@@ -14,6 +14,11 @@
       "import": "./dist/esm/*/index.js"
     }
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE.md"
+  ],
   "scripts": {
     "build": "concurrently \"$npm_execpath build:esm\" \"$npm_execpath build:cjs\"",
     "watch": "concurrently \"$npm_execpath build:esm -w\" \"$npm_execpath build:cjs -w\"",
@@ -27,7 +32,9 @@
     "@types/node": "^18.15.3",
     "concurrently": "^7.6.0",
     "rome": "^11.0.0",
-    "typed-emitter": "^2.1.0",
     "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "typed-emitter": "^2.1.0"
   }
 }
