--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "LICENSE.md"
   ],
   "scripts": {
-    "build": "concurrently \"$npm_execpath build:esm\" \"$npm_execpath build:cjs\"",
-    "watch": "concurrently \"$npm_execpath build:esm -w\" \"$npm_execpath build:cjs -w\"",
+    "build": "concurrently \"$npm_execpath run build:esm\" \"$npm_execpath run build:cjs\"",
+    "watch": "concurrently \"$npm_execpath run build:esm -w\" \"$npm_execpath run build:cjs -w\"",
     "build:esm": "tsc -p tsconfig.json",
     "build:cjs": "tsc -p tsconfig-cjs.json",
-    "prepublishOnly": "$npm_execpath build"
+    "prepublishOnly": "$npm_execpath run build"
   },
   "keywords": [],
   "author": "thoratica <me@tica.fun>",
