--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,16 @@
 {
   "lock": false,
+  "version": "2.0.0-alpha.0",
   "tasks": {
-    "dev": "deno run -A --unstable-net --watch examples/deno.ts"
+    "dev": "deno run -A --unstable-net --watch examples/deno.ts",
+    "build": "deno run -A scripts/build-npm.ts"
   },
   "lint": {
     "rules": {
       "exclude": ["ban-ts-comment", "no-explicit-any"]
     }
+  },
+  "imports": {
+    "std/fs": "https://deno.land/std@0.224.0/fs/mod.ts"
   }
 }
